    check filesystem mydata with path "myuser@192.168.1.10:mydata"

New: Max value for expect buffer is 100 KB.

New: You can now test for '\0' in an expect string. We escape '\0'
as "\0", that is, a '\' followed by the ascii value for 0. For
instance, here is how to test for an expect string that starts with
zero followed by any number of characters: expect "^[\\]0.*". Closes
issue #84

Fixed #55: Only run cron style checks once per minute. Minute is the
lowest resolution in the cron string, but if poll-cycle time is lower
than one minute the check could run several times in a minute.

New: Send HTTP headers with a HTTP protocol test. The syntax is
 http headers [name:value, name:value,..]
where each name:value pair is separated with ','. The statement
must come before the request statement. This statement can be used
to send any HTTP header, for instance, a cookie or a host header. In
a check host context, use of this statement might look like
  check host mmonit.com with address mmonit.com
    if failed
       port 80 protocol http
       with http headers [host: mmonit.com, Cache-Control: no-cache,
           Cookie: csrftoken=nj1bI3CnMCaiNv4beqo8ZaCfAQQvpgLH]
       and request /monit/ with content = "Monit [0-9.]+"
    then alert
This statement deprecate the old hostheader statement, which was
used to only set the HTTP host header.

New: Program check supports exit status change monitoring now. Syntax:
  check program foobar with path /usr/local/myscript.sh
    if changed status then alert

New: Option to run 'check program' as a different user and/or
group. To change uid or gid, Monit must run as root. Config
example:

  check program ls with path "/bin/ls -lrt /tmp" as uid "www"
       ...



Version 5.8.1

Fixed: Monit XML may be invalid if port check with custom HTTP
protocol request contains ampersand. Thanks to Markus Juenemann
for report.

Fixed: 5.8 added extra socket poll time which showed up as pluss